feat: swagger documentation for defect endpoint
